// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Dropdown/ComboBox Custom onBlur function automatically adds item to the list 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "padding": "1rem",
        "width": 300,
      }
    }
  >
    <div
      className="iot--combobox iot--combobox-helper-text"
      data-edit-option-text="Create"
      data-testid="combo-wrapper"
      onBlur={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="bx--list-box__wrapper"
      >
        <label
          className="bx--label"
          dir="auto"
          htmlFor="carbon-combobox-example"
          id="downshift-0-label"
        >
          Combobox title
        </label>
        <div
          className="bx--combo-box iot--combobox-input bx--list-box"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <div
            className="bx--list-box__field"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-describedby="combobox-helper-text-39"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-labelledby={null}
              autoComplete="off"
              className="bx--text-input"
              data-testid="combo-box"
              disabled={false}
              id="carbon-combobox-example"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              placeholder="Filter..."
              role="combobox"
              tabIndex="0"
              title=""
              type="text"
              value="Option 1"
            />
            <button
              aria-label="Clear selected item"
              className="bx--list-box__selection"
              onClick={[Function]}
              tabIndex={-1}
              title="Clear selected item"
              type="button"
            >
              <svg
                aria-hidden={true}
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
            <button
              aria-haspopup={true}
              aria-label="Open"
              className="bx--list-box__menu-icon"
              data-toggle={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseUp={[Function]}
              role="button"
              tabIndex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden={true}
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          <div
            aria-label="Choose an item"
            aria-labelledby={null}
            className="bx--list-box__menu"
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
        <div
          className="bx--form__helper-text"
          dir="auto"
          id="combobox-helper-text-39"
        >
          Optional helper text here
        </div>
      </div>
    </div>
    <button
      aria-describedby={null}
      aria-pressed={null}
      className="iot--btn bx--btn bx--btn--primary"
      data-testid="Button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "marginTop": "1rem",
        }
      }
      tabIndex={0}
      type="button"
    >
      Add new item
    </button>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Dropdown/ComboBox Default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "padding": "1rem",
        "width": 300,
      }
    }
  >
    <div
      className="iot--combobox iot--combobox-helper-text"
      data-edit-option-text="Create"
      data-testid="combo-wrapper"
      onBlur={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="bx--list-box__wrapper"
      >
        <label
          className="bx--label"
          dir="auto"
          htmlFor="carbon-combobox-example"
          id="downshift-0-label"
        >
          Combobox title
        </label>
        <div
          className="bx--combo-box iot--combobox-input bx--list-box"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <div
            className="bx--list-box__field"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-describedby="combobox-helper-text-24"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-labelledby={null}
              autoComplete="off"
              className="bx--text-input bx--text-input--empty"
              data-testid="combo-box"
              disabled={false}
              id="carbon-combobox-example"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              placeholder="Filter..."
              role="combobox"
              tabIndex="0"
              title=""
              type="text"
              value=""
            />
            
            <button
              aria-haspopup={true}
              aria-label="Open"
              className="bx--list-box__menu-icon"
              data-toggle={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseUp={[Function]}
              role="button"
              tabIndex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden={true}
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          <div
            aria-label="Choose an item"
            aria-labelledby={null}
            className="bx--list-box__menu"
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
        <div
          className="bx--form__helper-text"
          dir="auto"
          id="combobox-helper-text-24"
        >
          Optional helper text here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Dropdown/ComboBox Items as components 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "padding": "1rem",
        "width": 300,
      }
    }
  >
    <div
      className="iot--combobox iot--combobox-helper-text"
      data-edit-option-text="Create"
      data-testid="combo-wrapper"
      onBlur={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="bx--list-box__wrapper"
      >
        <label
          className="bx--label"
          dir="auto"
          htmlFor="carbon-combobox-example"
          id="downshift-0-label"
        >
          Combobox title
        </label>
        <div
          className="bx--combo-box iot--combobox-input bx--list-box"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <div
            className="bx--list-box__field"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-describedby="combobox-helper-text-27"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-labelledby={null}
              autoComplete="off"
              className="bx--text-input bx--text-input--empty"
              data-testid="combo-box"
              disabled={false}
              id="carbon-combobox-example"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              placeholder="Filter..."
              role="combobox"
              tabIndex="0"
              title=""
              type="text"
              value=""
            />
            
            <button
              aria-haspopup={true}
              aria-label="Open"
              className="bx--list-box__menu-icon"
              data-toggle={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseUp={[Function]}
              role="button"
              tabIndex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden={true}
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          <div
            aria-label="Choose an item"
            aria-labelledby={null}
            className="bx--list-box__menu"
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
        <div
          className="bx--form__helper-text"
          dir="auto"
          id="combobox-helper-text-27"
        >
          Optional helper text here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Dropdown/ComboBox add new items to list 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "padding": "1rem",
        "width": 300,
      }
    }
  >
    <div
      className="iot--combobox iot--combobox-helper-text"
      data-edit-option-text="Create"
      data-testid="combo-wrapper"
      onBlur={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="bx--list-box__wrapper"
      >
        <label
          className="bx--label"
          dir="auto"
          htmlFor="carbon-combobox-example"
          id="downshift-0-label"
        >
          Combobox title
        </label>
        <div
          className="bx--combo-box iot--combobox-input bx--list-box"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <div
            className="bx--list-box__field"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-describedby="combobox-helper-text-36"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-labelledby={null}
              autoComplete="off"
              className="bx--text-input bx--text-input--empty"
              data-testid="combo-box"
              disabled={false}
              id="carbon-combobox-example"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              placeholder="Filter..."
              role="combobox"
              tabIndex="0"
              title=""
              type="text"
              value=""
            />
            
            <button
              aria-haspopup={true}
              aria-label="Open"
              className="bx--list-box__menu-icon"
              data-toggle={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseUp={[Function]}
              role="button"
              tabIndex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden={true}
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          <div
            aria-label="Choose an item"
            aria-labelledby={null}
            className="bx--list-box__menu"
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
        <div
          className="bx--form__helper-text"
          dir="auto"
          id="combobox-helper-text-36"
        >
          Optional helper text here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Dropdown/ComboBox application-level control for selection 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--combobox iot--combobox-helper-text"
    data-edit-option-text="Create"
    data-testid="combo-wrapper"
    onBlur={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="bx--list-box__wrapper"
    >
      <label
        className="bx--label"
        dir="auto"
        htmlFor="carbon-combobox-example"
        id="downshift-0-label"
      >
        Combobox title
      </label>
      <div
        className="bx--combo-box iot--combobox-input bx--list-box"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          className="bx--list-box__field"
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-controls={null}
            aria-describedby="combobox-helper-text-30"
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby={null}
            autoComplete="off"
            className="bx--text-input"
            data-testid="combo-box"
            disabled={false}
            id="carbon-combobox-example"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            placeholder="Filter..."
            role="combobox"
            tabIndex="0"
            title=""
            type="text"
            value="Option 1"
          />
          <button
            aria-label="Clear selected item"
            className="bx--list-box__selection"
            onClick={[Function]}
            tabIndex={-1}
            title="Clear selected item"
            type="button"
          >
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
              />
            </svg>
          </button>
          <button
            aria-haspopup={true}
            aria-label="Open"
            className="bx--list-box__menu-icon"
            data-toggle={true}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseUp={[Function]}
            role="button"
            tabIndex="-1"
            title="Open"
            type="button"
          >
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </button>
        </div>
        <div
          aria-label="Choose an item"
          aria-labelledby={null}
          className="bx--list-box__menu"
          id="downshift-0-menu"
          role="listbox"
        />
      </div>
      <div
        className="bx--form__helper-text"
        dir="auto"
        id="combobox-helper-text-30"
      >
        Optional helper text here
      </div>
    </div>
  </div>
  <button
    aria-describedby={null}
    aria-pressed={null}
    className="iot--btn bx--btn bx--btn--primary"
    data-testid="Button"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "marginTop": "1rem",
      }
    }
    tabIndex={0}
    type="button"
  >
    Add new item
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/Dropdown/ComboBox multi-value tags 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "padding": "1rem",
        "width": 300,
      }
    }
  >
    <div
      className="iot--combobox iot--combobox-helper-text"
      data-edit-option-text="Create"
      data-testid="combo-wrapper"
      onBlur={[Function]}
      onKeyDown={[Function]}
    >
      <div
        className="bx--list-box__wrapper"
      >
        <label
          className="bx--label"
          dir="auto"
          htmlFor="carbon-combobox-example"
          id="downshift-0-label"
        >
          Combobox title
        </label>
        <div
          className="bx--combo-box iot--combobox-input bx--list-box"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <div
            className="bx--list-box__field"
          >
            <input
              aria-activedescendant={null}
              aria-autocomplete="list"
              aria-controls={null}
              aria-describedby="combobox-helper-text-33"
              aria-expanded={false}
              aria-haspopup="listbox"
              aria-labelledby={null}
              autoComplete="off"
              className="bx--text-input bx--text-input--empty"
              data-testid="combo-box"
              disabled={false}
              id="carbon-combobox-example"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              placeholder="Filter..."
              role="combobox"
              tabIndex="0"
              title=""
              type="text"
              value=""
            />
            
            <button
              aria-haspopup={true}
              aria-label="Open"
              className="bx--list-box__menu-icon"
              data-toggle={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseUp={[Function]}
              role="button"
              tabIndex="-1"
              title="Open"
              type="button"
            >
              <svg
                aria-hidden={true}
                fill="currentColor"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
              </svg>
            </button>
          </div>
          <div
            aria-label="Choose an item"
            aria-labelledby={null}
            className="bx--list-box__menu"
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
        <div
          className="bx--form__helper-text"
          dir="auto"
          id="combobox-helper-text-33"
        >
          Optional helper text here
        </div>
      </div>
      <ul
        className="iot--combobox-tags"
        data-testid="combo-tags"
      />
    </div>
  </div>
</div>
`;
